--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -79,6 +79,10 @@ Trunk (unreleased changes)
 
         BOOKKEEPER-848: Use volatile for lastAddConfirmed (Matteo Merli via sijie)
 
+      bookkeeper-server:
+
+        BOOKKEEPER-695: Some entry logs are not removed from the bookie storage (Matteo Merli via sijie)
+
 Release 4.3.0 - 2014-10-03
 
   Non-backward compatible changes:
