--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -38,6 +38,8 @@ Trunk (unreleased changes)
 
       BOOKKEEPER-846: TestLedgerChecker times out (rakeshr via sijie)
 
+      BOOKKEEPER-854: NPE on InterleavedLedgerStorage.onRotateEntryLog (sijie)
+
     IMPROVEMENTS:
 
       BOOKKEEPER-800: Expose whether a ledger is closed or not (ivank)
