--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,11 @@
+Release 4.3.2 - unreleased
+
+  Backward compatible changes:
+
+    BUGFIXES:
+
+    IMPROVEMENTS:
+
 Release 4.3.1 - 2015-05-19
 
   Backward compatible changes:
