--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -104,6 +104,8 @@ Trunk (unreleased changes)
 
         BOOKKEEPER-438: Move ledger id generation out of LedgerManager (Tong Yu via sijie)
 
+        BOOKKEEPER-868: Add ADD_ENTRY quorum timeout (Leigh Stewart via sijie)
+
       bookkeeper-server:
 
         BOOKKEEPER-695: Some entry logs are not removed from the bookie storage (Matteo Merli via sijie)
