--- a/doc/bookkeeperSecurity.textile
+++ b/doc/bookkeeperSecurity.textile
@@ -20,7 +20,7 @@ Metadata are stored on ZooKeeper, so first of all you will need to secure your Z
 
 Then you have to take care of access to Bookies, you can configure authentication and encryption using TLS, out of the box BookKeeper supports Kerberos authentication, DIGEST-MD5 authentication and TLS encryption. You can also leverage TLS client authentication in order to protect your data.
 
-h1. ZookKeeper security on BookKeeper
+h1. ZooKeeper security on BookKeeper
 
 Both clients and Bookies read and write metadata on ZooKeeper, it is also used for Bookie discovery. 
 The best way to protect data stored on ZooKeeper is to put ACLs on every z-node, this way only authorized users will be able to access (read/write) data
